# plateforme-tri-demandes-clients

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  prefect.yaml  pyproject.toml  requirements-flows.txt  requirements.txt  setup_prefect_workspace.py  tmp_model.joblib  tmp_model_2026-04-17.joblib  tmp_model_2026-04-18.joblib  tmp_model_2026-04-19.joblib
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yaml
.streamlit/: config.toml
models/: model.joblib
scripts/: run_pipeline.py
sql/: 001_create_signalconso_schema.sql
src/app/: main.py  streamlit_dashboard.py
src/app/api/: Dockerfile
src/app/api/routes/: health.py  predictions.py  tickets.py
src/app/api/schemas/: prediction.py
src/app/core/: config.py
src/app/db/: models.py  session.py
src/app/flows/: signal_conso_flows.py
src/app/ingestion/: extract.py  load.py  transform.py
src/app/ml/: predict.py  train.py
src/app/pipeline/: pipeline_service.py
src/app/services/: gcs_service.py
src/app/training/: train.py
tests/: test_api.py
