[project]
name = "plateforme-tri-demandes-clients"
version = "0.1.0"
description = "Plateforme intelligente de tri et de priorisation des demandes clients"
requires-python = "<4.0,>=3.10"
dependencies = [
    attr==0.3.2,
    ConfigParser==7.2.0,
    cryptography==46.0.7,
    Cython==3.2.4,
    dl==0.1.0,
    docutils==0.16,
    fastapi==0.135.3,
    filelock==3.25.2,
    HTMLParser==0.0.2,
    importlib_resources==6.5.2,
    inflect==7.5.0,
    ini2toml==0.15,
    ipython==8.12.3,
    ipywidgets==8.1.8,
    jnius==1.1.0,
    joblib==1.5.2,
    keyring==25.7.0,
    pandas==3.0.2,
    path.py==12.5.0,
    protobuf==7.34.1,
    pydantic==2.12.5,
    pydantic_settings==2.13.1,
    pyOpenSSL==26.0.0,
    pytest==9.0.3,
    redis==7.4.0,
    scikit_learn==1.8.0,
    Sphinx==9.1.0,
    SQLAlchemy==2.0.49,
    thread==2.0.6,
    trove_classifiers==2026.1.14.14,
    typing_extensions==4.15.0,
    uvicorn[standard]==0.30.6,
    urllib3_secure_extra==0.1.0,
    xmlrpclib==1.0.1,
    xx==3.3.2
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-mock (>=3.15.1,<4.0.0)",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
norecursedirs = [".git", ".venv", "dist", "build", "dbt/dbt_packages"]

[tool.poetry.dependencies]
python = "^3.11"
pdfplumber = "^0.11.9" 

[tool.ruff]
line-length = 100
target-version = "py311"

# Excluded folders
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]

# Activated rules
[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes (bugs)
    "I",   # isort (imports)
    "UP",  # python modernisation
    "B",   # bugbear (good patterns)
    "SIM", # simplifications
]

ignore = [
    "E501",  # over-length line
]

# Import sorting
[tool.ruff.lint.isort]
known-first-party = ["src"]

# Ruff formater
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
